Fix badge z-index when with native scrolling. Update check/radio buttons in iOS7.

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -1890,6 +1890,11 @@
     bottom: auto;
 }
 
+.km-native-scrolling .km-badge
+{
+    z-index: auto;
+}
+
 .km-native-scrolling .km-splitview .km-header,
 .km-native-scrolling .km-splitview .km-footer,
 .km-native-scrolling .km-popup.km-pane .km-header,
